# meet_transcriptor

./: .env_example  .gitignore  BUILD.md  Guide.md  Meet Transcript mac.spec  Meet Transcript.spec  README.md  alembic.ini  debug_transcriber.py  docker-compose.yml  how  install_ffmpeg.bat  launcher.py  laws_to_qdrant_config (3).ipynb  main.py  meet-transcript-backend.spec  package-lock.json  populate_meet_preprocess.py  populate_profiles.py  processed_meetings.json  profile (3).json  pyproject.toml  requirements.txt  scenario.json  sql_update.py  test_crawl4ai_basic.py  test_db.ipynb  test_db2.ipynb  test_generate_scenario.ipynb  test_history_facade.ipynb  test_linkedin_parser.py  test_meet_docker.ipynb  test_postprocess (1).ipynb  test_rag_for_all_meets.ipynb  test_router_facad.ipynb  test_scenario_check.ipynb  test_transcript_llm_calls.py
Title_law_26/: 26_I_A_1_1.0-1.txt  26_I_A_1_1.1(h)-1.txt  26_I_A_1_1.1(i)-1T.txt  26_I_A_1_1.1-1.txt  26_I_A_1_1.1-2.txt  26_I_A_1_1.1-3.txt  26_I_A_1_1.11-1.txt  26_I_A_1_1.15-1.txt  26_I_A_1_1.2-1.txt  26_I_A_1_1.2-2.txt  26_I_A_1_1.21-1.txt  26_I_A_1_1.21-2.txt  26_I_A_1_1.21-3.txt  26_I_A_1_1.21-4.txt  26_I_A_1_1.24-1.txt  26_I_A_1_1.25-1T.txt  26_I_A_1_1.25-2T.txt  26_I_A_1_1.25-3.txt  26_I_A_1_1.25-3T.txt  26_I_A_1_1.25-4T.txt  26_I_A_1_1.25-5T.txt  26_I_A_1_1.25-6T.txt  26_I_A_1_1.25-7T.txt  26_I_A_1_1.25-8T.txt  26_I_A_1_1.25A-0.txt  26_I_A_1_1.3-1.txt  26_I_A_1_1.4-1.txt  26_I_A_1_1.4-2.txt  26_I_A_1_1.4-3.txt  26_I_A_1_1.4-4.txt
extension/: background.js  content.js  helper.js  manifest.json  mic_permission.html  utils.js  (+3 more)
(+131 files in other folders)
