[project]
name = "transcriptor-v2-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "ipykernel>=6.29.5",
    "openai>=1.93.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "pywin32>=310",
    "requests>=2.32.4",
    "selenium>=4.34.1",
    "soundcard>=0.4.4",
    "sounddevice>=0.5.2",
    "streamlit==1.28",
    "webdriver-manager>=4.0.2",
]
