[project]
name = "transcriptor-v2-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "instructor>=1.10.0",
    "ipykernel>=6.29.5",
    "numpy>=1.26.4",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "selenium>=4.34.1",
    "soundcard>=0.4.4",
    "sounddevice>=0.5.2",
    "sqlalchemy>=2.0.43",
    "streamlit==1.28",
    "tiktoken>=0.10.0",
    "uvicorn>=0.35.0",
    "webdriver-manager>=4.0.2",
    "websockets>=15.0.1",
]
